<resources>
    <string name="app_name">introduccionkotlin</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fraseLogin">¿Hasta qué nivel eres capaz de llegar?</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="tvOlvidoPassword">¿Olvidaste tu contraseña?</string>
    <string name="cbTerminosYCondiciones">He leído y acepto los</string>
    <string name="tvTerminosYCondiciones">Términos y condiciones de uso.</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="tvTerms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem nulla pharetra diam sit amet nisl suscipit adipiscing. Tellus in metus vulputate eu scelerisque felis. Enim nunc faucibus a pellentesque sit. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Augue mauris augue neque gravida in fermentum et sollicitudin. Egestas erat imperdiet sed euismod. Adipiscing tristique risus nec feugiat. Donec pretium vulputate sapien nec sagittis. Maecenas sed enim ut sem viverra aliquet eget. Dignissim enim sit amet venenatis urna cursus eget. Mauris in aliquam sem fringilla ut morbi. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Eu consequat ac felis donec et odio pellentesque diam. Massa sed elementum tempus egestas. Sed turpis tincidunt id aliquet risus feugiat. Nullam vehicula ipsum a arcu cursus vitae. Habitasse platea dictumst vestibulum rhoncus est.</string>
    <string name="tvTerms2">Enim neque volutpat ac tincidunt vitae semper quis lectus. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Malesuada pellentesque elit eget gravida cum. In iaculis nunc sed augue lacus viverra vitae congue. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Viverra maecenas accumsan lacus vel facilisis volutpat est. Dolor morbi non arcu risus. Adipiscing commodo elit at imperdiet. Ultrices eros in cursus turpis massa tincidunt. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Eget magna fermentum iaculis eu. Vitae ultricies leo integer malesuada nunc. Sapien eget mi proin sed libero enim sed faucibus turpis. Sagittis vitae et leo duis ut. Massa vitae tortor condimentum lacinia quis vel.</string>
    <string name="tvTerms3">Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque elit. Quis lectus nulla at volutpat diam ut venenatis tellus in. Tristique senectus et netus et. Nisl purus in mollis nunc sed id semper risus. Sed arcu non odio euismod lacinia at quis risus. Habitant morbi tristique senectus et netus et. Diam sollicitudin tempor id eu nisl nunc mi. Eu mi bibendum neque egestas congue quisque. Vitae et leo duis ut diam quam nulla porttitor massa. Malesuada bibendum arcu vitae elementum. Ut tortor pretium viverra suspendisse potenti nullam ac tortor. Vitae purus faucibus ornare suspendisse sed nisi lacus sed. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Suscipit tellus mauris a diam maecenas. Faucibus turpis in eu mi bibendum. Tempus quam pellentesque nec nam aliquam sem et. Fusce ut placerat orci nulla pellentesque dignissim. Sodales ut eu sem integer vitae justo eget magna fermentum. Eget magna fermentum iaculis eu. Sapien et ligula ullamcorper malesuada.</string>
</resources>