<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:src="@mipmap/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrase"
        style="@style/viewCustom"
        android:text="@string/fraseLogin"
        android:textColor="@color/orange"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:guidelineUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFrase" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/viewCustom"
        android:backgroundTint="@color/green"
        android:onClick="login"
        android:text="@string/btnIniciarSesion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvOlvidoPassword"
        style="@style/viewCustom"
        android:onClick="forgotPassword"
        android:text="@string/tvOlvidoPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

    <LinearLayout
        android:id="@+id/lyTerminosYCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOlvidoPassword">

        <CheckBox
            android:id="@+id/cbTerminosYCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbTerminosYCondiciones"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTerminosYCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"
            android:text="@string/tvTerminosYCondiciones"
            android:textColor="@color/salmon"
            android:textSize="12sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btnGoogle"
        style="@style/viewCustom"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="@string/btnGoogle"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lyTerminosYCondiciones" />

    <Button
        android:id="@+id/btnFacebook"
        style="@style/viewCustom"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/btnFacebook"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>